@@ -536,3 +536,68 @@ class TestCommitBuilder(test_repository.TestCaseWithRepository):
 
     def test_last_modified_file_link(self):
         self._check_kind_change(self.make_file, self.make_link)
+
+    def test_record_entry_contents_exec_None(self):
+        # When content_summary returns None for executable, we will still set
+        # it to a value
+        tree = self.make_branch_and_tree('.')
+        self.build_tree(['file'])
+        tree.add(['file'], ['file-id'])
+
+        _orig_path_content_summary = tree.path_content_summary
+
+        def path_content_summary_exec_None(path):
+            summary = _orig_path_content_summary(path)
+            if path == 'file':
+                summary = (summary[0], summary[1], None) + summary[3:]
+            return summary
+
+        def path_content_summary_exec_True(path):
+            summary = _orig_path_content_summary(path)
+            if path == 'file':
+                summary = (summary[0], summary[1], True) + summary[3:]
+            return summary
+
+        def path_content_summary_exec_False(path):
+            summary = _orig_path_content_summary(path)
+            if path == 'file':
+                summary = (summary[0], summary[1], False) + summary[3:]
+            return summary
+
+
+        tree.path_content_summary = path_content_summary_exec_None
+        rev_id = tree.commit('')
+        rev_tree = tree.branch.repository.revision_tree(rev_id)
+        executable = rev_tree.inventory['file-id'].executable
+        self.assertIsNot(None, executable)
+        self.assertFalse(executable)
+
+        tree.path_content_summary = path_content_summary_exec_True
+        rev_id = self.mini_commit(tree, 'file', 'file', True, True)
+        rev_tree = tree.branch.repository.revision_tree(rev_id)
+        executable = rev_tree.inventory['file-id'].executable
+        self.assertIsNot(None, executable)
+        self.assertTrue(executable)
+
+        # Now with path_content_summary_exec_None, there should be no change
+        tree.path_content_summary = path_content_summary_exec_None
+        rev_id = self.mini_commit(tree, 'file', 'file', False, False)
+        rev_tree = tree.branch.repository.revision_tree(rev_id)
+        executable = rev_tree.inventory['file-id'].executable
+        self.assertIsNot(None, executable)
+        self.assertTrue(executable)
+
+        # Now we set the exec back to False, which should also be preserved
+        tree.path_content_summary = path_content_summary_exec_False
+        rev_id = self.mini_commit(tree, 'file', 'file', True, True)
+        rev_tree = tree.branch.repository.revision_tree(rev_id)
+        executable = rev_tree.inventory['file-id'].executable
+        self.assertIsNot(None, executable)
+        self.assertFalse(executable)
+
+        tree.path_content_summary = path_content_summary_exec_None
+        rev_id = self.mini_commit(tree, 'file', 'file', False, False)
+        rev_tree = tree.branch.repository.revision_tree(rev_id)
+        executable = rev_tree.inventory['file-id'].executable
+        self.assertIsNot(None, executable)
+        self.assertFalse(executable)
